server routes refactored
